--- a/builtin-category-mapping.yaml
+++ b/builtin-category-mapping.yaml
@@ -48,6 +48,26 @@ logsources:
         rewrite:
             product: windows
             service: security
+
+    antivirus:
+        category: antivirus
+        conditions:
+            EventID:  # https://learn.microsoft.com/en-us/microsoft-365/security/defender-endpoint/troubleshoot-microsoft-defender-antivirus IDs with existing 'Threat Name' or 'Path'
+                - 1006
+                - 1007
+                - 1008
+                - 1009
+                - 1010
+                - 1011
+                - 1012
+                - 1017
+                - 1018
+                - 1019
+                - 1115
+                - 1116
+        rewrite:
+            product: windows
+            service: windefend
 fieldmappings_process:
     Image: NewProcessName
     ProcessId: NewProcessId
@@ -69,3 +89,6 @@ fieldmappings_network:
     DestinationIp: DestAddress
     DestinationPort: DestPort
     Protocol: Protocol
+fieldmappings_antivirus:
+    Signature: ThreatName
+    Filename: Path
